--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "twitter": "~1.0.3",
     "js-yaml": "~3.0.1",
     "winston": "~0.7.2",
-    "node-dogecoindark": "~0.3.5",
+    "node-dogecoindark": "0.3.9",
     "swig": "1.3.2",
     "express": "3.4.8"
   },
